--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -4,3 +4,12 @@ langserve[all]==0.2.2
 langchain-community==0.2.10
 python-dotenv==1.0.1
 cython==3.0.10
+
+drain3==0.9.11
+causality==0.0.10
+pyod==2.0.1
+suod==0.1.3
+xgboost==2.1.0
+pmdarima==2.0.4
+tqdm==4.66.4
+numpy==1.26.1
